atualizada imagem de criação de user e service padrão